# FlightPath

./: .gitignore  CMakeLists.txt  benchmakrs.ods  benchmarks.ods  readme.md
Interface_Graphique/: Interface_Graphique.pro  Interface_Graphique.pro.user.7076ffa  app.rc  dialogwindow.cpp  dialogwindow.h  dialogwindow.ui  excelhelper.cpp  excelhelper.h  fuelmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowtest.cpp  mainwindowtest.h  mainwindowtest.ui  nightflightmodel.h  resourcesfiles.qrc  stationmodel.cpp  stationmodel.h  statusmodel.h
Interface_Graphique/Solver/: aerodromes.csv
Interface_Graphique/Solver/src/: geography.h  geomap.h  geoserializer.h  pathsolver.h  station.h  userinterface.cpp  userinterface.h
Interface_Graphique/Solver/src/breitling/: breitlingSolver.cpp  breitlingSolver.h  breitlingnatural.cpp  breitlingnatural.h  label_setting_breitling.cpp  label_setting_breitling.h
Interface_Graphique/Solver/src/geoserializer/: csvserializer.cpp  csvserializer.h  xlsserializer.cpp
Interface_Graphique/Solver/src/optimisation/: optimisationSolver.cpp  optimisationSolver.h
Interface_Graphique/Solver/src/tsp/: genetictsp.cpp  genetictsp.h  tsp_nearest_multistart_opt.cpp  tsp_nearest_multistart_opt.h  tsp_optimization.cpp  tsp_optimization.h
Interface_Graphique/build-Interface_Graphique-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
Interface_Graphique/build-Interface_Graphique-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
Interface_Graphique/build-Interface_Graphique-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QApplication.8980876194FD4E98.idx  QCheckBox.6A75D1C0C5FE08DA.idx  QComboBox.9DF7AD3EA1117C04.idx  QDir.A2DCB89A47FC0656.idx  QDoubleSpinBox.E4D162F08662A2F1.idx  QFile.09DEB26F87824498.idx  QFormLayout.0D16FDB547FED817.idx  QGridLayout.DBE3C988B02A822C.idx  QGroupBox.0F889F4481FA04B9.idx  QHBoxLayout.5472A19FBF6ECB13.idx  QLabel.808F8E3D778368AC.idx  QLayout.39B54BE669A242E5.idx  QLineEdit.B39E355DE1F065C2.idx  QListWidget.A3BD0C549BB4DE6D.idx  QMainWindow.EE23801D0C338E0A.idx  QMenuBar.A09F2C5EFB489AE5.idx  QPushButton.F1CB874CBDDE906E.idx  QSplitter.F421ED0753B17B7D.idx  QStatusBar.01ACE56A1CE5F722.idx  QVBoxLayout.49BB61DC60BA3CE3.idx  QVariant.91D7E59EEF0520CA.idx  QWidget.8DFD5DF5C8BAFDB6.idx  __stddef_max_align_t.h.E98346C3F27BFB20.idx  _mingw.h.60AB9852C7DBE705.idx  _mingw_ddk.h.EB3A258FCEEA3E1A.idx  _mingw_mac.h.06AAD4BF2E626DA5.idx  _mingw_off_t.h.8FC391D5C6A087CE.idx  _mingw_secapi.h.6985886EC47DE4DE.idx  _mingw_stat64.h.D2D44D631BA0466B.idx  _timeval.h.BF0EE83EB1A38B3B.idx  algorithm.28C8D3441014E469.idx  algorithmfwd.h.4F55B9C6C40E0C5E.idx  align.h.1ECA9F0FE2FFB9E2.idx  aligned_buffer.h.B5DD68559F0935F5.idx  (+404 more)
Interface_Graphique/build-Interface_Graphique-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
Interface_Graphique/resources/: FicheDeNavigationModel.xlsx
Interface_Graphique/resources/icon/: icon.icns
Solver/: aerodromes.csv  aerodromes.xlsx  aerodromesCSV.txt  aerodromesXLSX.txt
Solver/src/: geography.h  geomap.h  geometry.h  geoserializer.cpp  geoserializer.h  main.cpp  pathsolver.h  station.h  userinterface.cpp  userinterface.h
Solver/src/breitling/: BreitlingSolver.cpp  BreitlingSolver.h  breitlingSolver.cpp  breitlingSolver.h  breitlingnatural.cpp  breitlingnatural.h  label_setting_breitling.cpp  label_setting_breitling.h  structures.h
Solver/src/geoserializer/: csvserializer.cpp  csvserializer.h  xlsserializer.cpp  xlsserializer.h
Solver/src/tsp/: genetictsp.cpp  genetictsp.h  tsp_nearest_multistart_opt.cpp  tsp_nearest_multistart_opt.h  tsp_optimization.cpp  tsp_optimization.h  tspnearest.cpp  tspnearest.h
Solver/src/tsp/tspant/: problem.cpp  problem.h  tspant.cpp  tspant.h  tspantexception.h  tspantsystem.cpp
Solver/tspant2/: problem.cpp  tspant.cpp  tspantsystem.h
Tests/: test.cpp
doc/: pl.txt
